# sharkbench

./: .gitignore  Cargo.toml  LICENSE  README.md  Requests.http  benchmark.dart  benchmark_computation.dart  pubspec.yaml
benchmark/: frameworks.yaml  languages.yaml
benchmark/computation/c/gcc-12/: Dockerfile  _benchmark.yaml  benchmark.yaml  main.c
benchmark/computation/c/gcc-6/: Dockerfile  benchmark.yaml
benchmark/computation/csharp/dotnet/: Dockerfile  Program.cs  benchmark.yaml  web.csproj
benchmark/computation/csharp/dotnet-6/: Dockerfile  Program.cs  benchmark.yaml  web.csproj
benchmark/computation/d/d-1.40/: Dockerfile  benchmark.yaml
benchmark/computation/d/d-1.41/: Dockerfile  benchmark.yaml  dub.json
benchmark/computation/dart/_common/: main.dart
benchmark/computation/dart/aot-2.14/: Dockerfile  _benchmark.yaml  benchmark.yaml  pubspec.yaml
benchmark/computation/dart/aot-3.11/: Dockerfile  pubspec.yaml
benchmark/computation/dart/jit-2.14/: _benchmark.yaml  benchmark.yaml
benchmark/computation/dart/jit-3.11/: .gitignore  benchmark.yaml
benchmark/computation/dart/native-3.11/: Dockerfile  benchmark.yaml
benchmark/computation/elixir/elixir-1.16/: Dockerfile  benchmark.yaml  main.exs
benchmark/computation/go/go-1.8/: Dockerfile  _benchmark.yaml  benchmark.yaml  main.go
benchmark/computation/java/semeru-11/: Dockerfile  benchmark.yaml
benchmark/computation/java/semeru-21/: Dockerfile  benchmark.yaml
benchmark/computation/java/temurin-21/: _benchmark.yaml  benchmark.yaml
benchmark/computation/java/temurin-8/: Dockerfile  benchmark.yaml  pom.xml
benchmark/computation/javascript/bun-1/: Dockerfile  benchmark.yaml  main.js
benchmark/computation/javascript/nodejs-12/: Dockerfile  benchmark.yaml  main.js
benchmark/computation/julia/julia-1.10/: Dockerfile  app.jl  benchmark.yaml  deps.jl
benchmark/computation/python/_common/: app.py
benchmark/computation/python/pypy-3.6/: Dockerfile  benchmark.yaml
benchmark/computation/python/python-3.6/: _benchmark.yaml  benchmark.yaml
benchmark/computation/ruby/default-2.7/: Dockerfile  benchmark.yaml
benchmark/computation/ruby/jit-2.7/: Dockerfile  benchmark.yaml  main.rb
benchmark/computation/rust/rust-1.40/: Cargo.toml  Dockerfile  benchmark.yaml
benchmark/computation/rust/rust-1.74/: Cargo.toml  Dockerfile  _benchmark.yaml  benchmark.yaml
benchmark/computation/swift/swift-5.10/: Dockerfile  Package.swift  benchmark.yaml
benchmark/computation/zig/zig-0.14/: Dockerfile  benchmark.yaml  build.zig
benchmark/computation/zig/zig-0.15/: Dockerfile  benchmark.yaml
benchmark/computation/zig/zig-0.16/: Dockerfile  benchmark.yaml
benchmark/web/cplusplus/drogon-1.9/: CMakeLists.txt  Dockerfile  benchmark.yaml  main.cpp
benchmark/web/cpp/drogon-1.9/: Dockerfile  PeriodicTableController.cpp  PeriodicTableController.h  benchmark.yaml
benchmark/web/csharp/aspdotnetcore/: Dockerfile  (+4 more)
benchmark/web/rust/hyper-1-rust-1.74/: Cargo.toml  Dockerfile  benchmark.yaml
benchmark/web/rust/hyper-1-rust-1.74/src/: main.rs
benchmark/web/rust/hyper-1-rust-1.86/: Cargo.toml  benchmark.yaml
benchmark/web/rust/hyper-1-rust-1.86/src/: main.rs
benchmark/web/rust/rama-0.2-rust-1.86/: Cargo.toml  Dockerfile  benchmark.yaml
benchmark/web/rust/rama-0.2-rust-1.86/src/: main.rs
benchmark/web/rust/rama-0.2.0-alpha.6-rust-1.84/: Cargo.toml  Dockerfile  benchmark.yaml
benchmark/web/rust/rama-0.2.0-alpha.6-rust-1.84/src/: main.rs
benchmark/web/rust/rama-0.3-rust-1.96/: Cargo.toml  Dockerfile  benchmark.yaml
benchmark/web/rust/rama-0.3-rust-1.96/src/: main.rs
benchmark/web/rust/rocket-0.5-rust-1.86/: Cargo.toml  benchmark.yaml
benchmark/web/rust/rocket-0.5-rust-1.86/src/: main.rs
computation/dart/aot-2.14/: Dockerfile
computation/dart/dart-aot-3-2/: Dockerfile  _benchmark.yaml
computation/dart/dart-aot-3.2/: pubspec.yaml
computation/dart/dart-jit-3-2/: _benchmark.yaml
computation/dart/dart-jit-3.2/: Dockerfile  main.dart
computation/dart/jit-2.14/: Dockerfile  main.dart  pubspec.yaml
computation/java/temurin-21/: Dockerfile  pom.xml
computation/javascript/bun-1/: Dockerfile
computation/javascript/javascript-nodejs-20-10/: Dockerfile  main.js  package.json
computation/javascript/javascript-nodejs-20.10/: _benchmark.yaml
computation/javascript/nodejs-12/: Dockerfile  _benchmark.yaml  main.js
computation/javascript/nodejs-20.10/: main.js
computation/python/python-3.6/: Dockerfile  _benchmark.yaml  app.py  requirements.txt
computation/python/python-3.9/: _benchmark.yaml  app.py  requirements.txt
lib/benchmark/: runner.dart
lib/benchmark/computation/: computation.dart
lib/benchmark/web/: web.dart
lib/models/: benchmark_info.dart
lib/utils/: docker_file_utils.dart  docker_runner.dart  docker_stats.dart  http_load_tester.dart  result_writer.dart  shell.dart
result/: computation_result.csv  web_result.csv
src/: main.rs  utils.dart
src/benchmark/: benchmark.rs  mod.rs
src/benchmark/computation/: computation.rs  mod.rs
src/benchmark/web/: mod.rs
src/models/: benchmark_info.dart  benchmark_result.dart
src/utils/: copy_files.rs  docker_runner.rs  docker_stats.dart  docker_stats.rs  http_load_tester.rs  meta_data_parser.rs  mod.rs  panic.rs  percentile.rs  result_reader.rs  result_writer.rs  serialization.rs  shell.rs  version.rs  version_migrator.rs
test/: utils_test.dart
test/unit/utils/: docker_file_utils_test.dart
(+370 files in other folders)
