[package]
name = "sharkbench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
rand = "0.8"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
tokio = { version = "1.35.1", features = ["full"] }
