[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
smallstr = { version = "0.3", features = ["serde"] }
thiserror = "2"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
overflow-checks = false
