[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.86.0"

[dependencies]
rama = { version = "0.2.0-alpha.11", features = ["http-full", "boring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
