[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rama = { version = "0.2.0-alpha.6", features = ["http-full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
