[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
